[package]
name = "cargo-bisect-bot"
version = "0.1.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
tokio = { version = "0.2.20", features = ["full"] }
serde = "1.0.106"
serde_json = "1.0.52"
reqwest = "0.10.4"
